# python-project-83

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  database.sql  docker-compose.yml  pyproject.toml
.github/workflows/: app-check.yml
page_analyzer/: app.py  db.py
page_analyzer/templates/: home.html  index.html  layout.html  show_url.html  urls.html
page_analyzer/templates/components/: footer.html  navbar.html
page_analyzer/templates/urls/: index.html  url.html
